[package]
name = "parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Redfire <redfire75369@hotmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
css-style = "0.14.1"
umya-spreadsheet = { version = "2.1.0", features = ["js"] }
wasm-bindgen = "0.2.93"
